# clef

./: .env.example  .gcloudignore  .gitignore  DEPLOYMENT.md  DOCKER_SETUP.md  README.md  SECRETS_SETUP.md  docker-compose.yml  run_local.sh
backend/: .env.dev.example  .env.example  .env.prod.example  .env.test.example  Dockerfile  Dockerfile.dev  README.md  pyproject.toml  requirements.txt  test_output.txt  validate_env.py
backend/app/: __init__.py  main.py  scheduler.py
backend/clef_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: README.md  init_ul_data.py  migrate_responsables_to_benevoles.py  migrate_to_multitenant.py  setup_gcp.sh  setup_github_secrets.sh
backend/terraform/: .terraform.lock.hcl  apis.tf  kms.tf  main.tf  memorystore.tf  memorystore_valkey.tf  outputs.tf  providers.tf  service_account.tf  tfplan-dev  valkey.tf  variables.tf
backend/tests/: __init__.py  conftest.py  test_alerts.py  test_api_keys.py  test_approbation_api.py  test_audit_trail.py  test_auth.py  test_cache.py  test_calendar_router.py  test_calendar_service.py  test_carnet_de_bord.py  test_config_api.py  test_depenses_api.py  test_devis_factures_api.py  test_dossiers_reparation_api.py  test_drive_service.py  test_dt_token_service.py  test_fournisseurs_api.py  test_gmail_service.py  test_ical.py  test_import_vehicles.py  test_kms_service.py  test_mocks.py  test_qr_encode.py  test_reminder_service.py  test_repair_models.py  test_reservation_calendar.py  test_reservations_api.py  test_reservations_valkey.py  test_sheets_service.py  test_suivi_mode_defaults.py  (+9 more)
(+287 files in other folders)
